# FastAPI_CRUD

./: .env.example  .gitignore  CODE_REVIEW_CHECKLIST.md  README.md  alembic.ini  pyproject.toml  user.db
alembic/: env.py
alembic/versions/: 977229eaa293_init.py
app/: __init__.py  database.py  main.py
app/auth/dependencies/: auth_dependencies.py
app/auth/repositories/: session_repository.py
app/auth/services/: __init__.py  auth_service.py  session_service.py
app/auth/utils/: security.py
app/friends/dependencies/: friends_dependencies.py
app/friends/models/: friendships.py
app/friends/repositories/: friends_repository.py
app/friends/routes/: __init__.py  friends_route.py
app/friends/schemas/: friends_schema.py
app/friends/services/: friends_service.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: auth_service.py
app/shared/: __init__.py  api.py  errors.py
app/tasks/: __init__.py
app/tasks/dependencies/: task_dependencies.py
app/tasks/models/: __init__.py  tasks.py
app/tasks/repositories/: __init__.py  task_repository.py  tasks_repository.py
app/tasks/routes/: __init__.py  task_route.py
app/user/: __init__.py
app/utils/: security.py
config/: config.py  database.py  dependencies.py
docs/: ARCHITECTURE.MD  BACKEND_IMPROVEMENT_GUIDE.MD  BUSINESS_RULES.MD  CODEBASE_RULES.MD  FRONTEND_STANDARDS.MD
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx
tests/: conftest.py  test_auth.py  test_friendship.py  test_task.py  test_user.py
(+43 files in other folders)
