[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.10.2",
    "python-dotenv>=1.1.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "psycopg2>=2.9.11",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
